Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -117,11 +117,7 @@ Potential market or impact of the hack</p>
 
 <h3>Prizes</h3>
 
-<p><strong>1st place</strong>: TBD (~$500 per person)
-<strong>2nd place</strong>: TBD (~$250 per person)
-<strong>3rd place</strong>: TBD (~$150 per person)
-<strong>Honorable Mention</strong>: Swag
-<strong>Best MongoDb Application</strong>: TBD (Sponsored by 10gen)</p>
+<p><strong>1st place</strong>: TBD (~$500 per person)<br><strong>2nd place</strong>: TBD (~$250 per person)<br><strong>3rd place</strong>: TBD (~$150 per person)<br><strong>Honorable Mention</strong>: Swag<br><strong>Best MongoDb Application</strong>: TBD (Sponsored by 10gen)  </p>
 
 <hr><h2>Schedule</h2>
 
