--- a/email.html
+++ b/email.html
@@ -26,13 +26,13 @@
     body{
       background-image:url("http://hackblue.github.com/images/bg.jpg");
       background-position:top left;
-      background-repeat:repeat-x repeat-y;
+      background-repeat:repeat;
       background-color:#307DCE;
     }
     #container{
       background-image:url("http://hackblue.github.com/images/bg.jpg");
       background-position:top left;
-      background-repeat:repeat-x repeat-y;
+      background-repeat:repeat;
       background-color:#307DCE;
       height:100%;
       margin:0;
@@ -158,7 +158,8 @@
 
     <body bgcolor="#307DCE" style="margin: 0;padding: 0;width: 100% !important;">
     <center>
-        <table bgcolor="#307DCE" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="container" style="height: 100%;margin: 0;padding: 0;width: 100%;">
+        <table bgcolor="#307DCE" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="container" style="height: 100%;margin: 0;padding: 0;width: 100%;background-image:url('http://hackblue.github.com/images/bg.jpg');background-position:top left;background-repeat:repeat;background-color:#307DCE;">
+
             <tbody>
                 <tr style="background: #FFF;">
                     <td align="center" valign="top">
