--- a/email.html
+++ b/email.html
@@ -156,10 +156,9 @@
     }
 </style><style type="text/css"></style></head>
 
-    <body bgcolor="#307DCE" style="margin: 0;padding: 0;width: 100% !important;">
+    <body background="http://hackblue.github.com/images/bg.jpg" bgcolor="#307DCE" style="margin: 0;padding: 0;width: 100% !important;background-image:url('http://hackblue.github.com/images/bg.jpg');background-position:top left;background-repeat:repeat;background-color:#307DCE;">
     <center>
-        <table bgcolor="#307DCE" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="container" style="height: 100%;margin: 0;padding: 0;width: 100%;background-image:url('http://hackblue.github.com/images/bg.jpg');background-position:top left;background-repeat:repeat;background-color:#307DCE;">
-
+        <table background="http://hackblue.github.com/images/bg.jpg" bgcolor="#307DCE" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="container" style="height: 100%;margin: 0;padding: 0;width: 100%;background-image:url('http://hackblue.github.com/images/bg.jpg');background-position:top left;background-repeat:repeat;background-color:#307DCE;">
             <tbody>
                 <tr style="background: #FFF;">
                     <td align="center" valign="top">
