Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="hackblue.github.com : HackBlue 2013 Official Website" />
+    <meta name="description" content="[hack Blue]; : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>hackblue.github.com</title>
+    <title>[hack Blue];</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/hackblue">View on GitHub</a>
 
-          <h1 id="project_title">hackblue.github.com</h1>
-          <h2 id="project_tagline">HackBlue 2013 Official Website</h2>
+          <h1 id="project_title">[hack Blue];</h1>
+          <h2 id="project_tagline"></h2>
 
         </header>
     </div>
@@ -27,20 +27,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>HackBlue</h1>
+        <p>Want to finally build that iPhone app you always wanted? Have a brilliant idea for the next viral game? Want to hang out with the best hackers and designers at Duke and UNC while enjoying lots of free food, swag, and prizes? Or have you assembled a dream team that will create the next big thing on the Web? Come to HackBlue, a student run hackathon sponsored by Google, Palantir, Github, 10gen, and Duke’s Innovations Co-Lab!</p>
 
-<h2>Overview</h2>
-
-<h3>Organizers</h3>
-
-<p><strong>Katie Hawthorne (UNC)</strong><br><a href="mailto:kathryne.h@gmail.com">kathryne.h@gmail.com</a><br>
-919-457-3248  </p>
-
-<p><strong>Dennis Li (Duke)</strong><br><a href="mailto:dennis.li@duke.edu">dennis.li@duke.edu</a><br>
-703-624-6103 </p>
-
-<p><strong>Yang Su (Duke)</strong><br><a href="mailto:yang.su@duke.edu">yang.su@duke.edu</a><br>
-214-870-8716  </p>
+<p>Whether you are a seasoned hacker or a complete beginner, you will have all the resources you need to bring your idea to fruition within a short 24 hours. Compete against the best hackers at Duke and UNC for a chance at some fantastic prizes (TBA -- but they’ll be pretty cool, we promise =)</p>
 
 <h3>Time</h3>
 
@@ -48,78 +37,14 @@
 
 <h3>Location</h3>
 
-<p>Classrooms in the Link</p>
+<p>French Family Sciences 2231</p>
 
-<h3>Expectations</h3>
-
-<p>~80 Participants<br>
-~65 From Duke<br>
-~15 From UNC  </p>
-
-<h3>Sponsors</h3>
-
-<ul>
-<li>
-<strong>Palantir</strong> - Swag, Cash, Engineers</li>
-<li>
-<strong>Google</strong> - Swag, Cash, Engineer</li>
-<li>
-<strong>Github</strong> - Swag, Cash</li>
-<li>
-<strong>10gen</strong> - Swag, Cash</li>
-<li>
-<strong>Duke CoLab</strong> - Resources</li>
-<li>
-<strong>Duke OIT</strong> - Space</li>
-</ul><h3>Judges</h3>
-
-<ul>
-<li>Palantir Engineers (TBD)</li>
-<li>Google Engineer</li>
-<li>Michael Faber</li>
-<li>Professor Robert Duvall</li>
-</ul><h3>Event Page and Links</h3>
+<h3>Event Page and Links</h3>
 
 <ul>
 <li><a href="http://www.facebook.com/events/363820757063946">Facebook Event</a></li>
 <li><a href="https://www.hackerleague.org/hackathons/hack-blue">Hacker League Page</a></li>
-</ul><hr><h2>Hackathon Details</h2>
-
-<h3>Rules</h3>
-
-<ul>
-<li>Must be a student from Duke or UNC to participate</li>
-<li>A team can consist of 1 to 4 members</li>
-<li>Must <a href="https://docs.google.com/forms/d/1BMN0XmXeEAIrVz-KDn0Y9XX_sCYafxqalepAuKKryCY/viewform">register</a> before the event by midnight Thursday, 4/4 to attend</li>
-<li>All participants are strongly encouraged to remain at the event location for the entire duration of the event</li>
-<li>All hacks must be original work by the students completed during the hackathon. No prior work are permitted</li>
-<li>The use of external libraries are allowed, as long as licenses permit and properly sourced</li>
-</ul><h3>Resources</h3>
-
-<ul>
-<li>Internet, power, work space, food/drink/snack will be provided to all participants</li>
-<li>Students must bring their own laptops and hardware needed for their hacks</li>
-<li>Git and VMs can be provided by CoLab (Need confirmation)</li>
-</ul><h3>Judging Criteria</h3>
-
-<p><strong>25% Design</strong>
-User Experience and User Interface</p>
-
-<p><strong>25% Techical Challenge</strong>
-Complexity/Difficulty of hack, Technologies Used</p>
-
-<p><strong>25% Creativity and Impact</strong>
-Originality in idea, novelty in use case, or general creative problem solving
-Potential market or impact of the hack</p>
-
-<p><strong>25% Demo/Presentation</strong>
-4 minute demo and 1 minute Q&amp;A</p>
-
-<h3>Prizes</h3>
-
-<p><strong>1st place</strong>: TBD (~$500 per person)<br><strong>2nd place</strong>: TBD (~$250 per person)<br><strong>3rd place</strong>: TBD (~$150 per person)<br><strong>Honorable Mention</strong>: Swag<br><strong>Best MongoDb Application</strong>: TBD (Sponsored by 10gen)  </p>
-
-<hr><h2>Schedule</h2>
+</ul><h2>Schedule</h2>
 
 <p><strong>4/6 Saturday</strong></p>
 
@@ -157,11 +82,69 @@ Potential market or impact of the hack</p>
 
 <p><strong>4/7 8:00 AM - 11:00 AM</strong> <a href="#engineerofficehours">Engineer Office Hours</a></p>
 
-<h3>Event Details</h3>
+<hr><h2>Hackathon Details</h2>
+
+<h3>Rules</h3>
+
+<ul>
+<li>Must be a student from Duke or UNC to participate</li>
+<li>A team can consist of 1 to 4 members</li>
+<li>Must <a href="https://www.hackerleague.org/hackathons/hack-blue">register</a> before the event by midnight Thursday, 4/4 to attend</li>
+<li>All participants are strongly encouraged to remain at the event location for the entire duration of the event</li>
+<li>All hacks must be original work by the students completed during the hackathon. No prior work are permitted</li>
+<li>The use of external libraries are allowed, as long as licenses permit and properly sourced</li>
+</ul><h3>Resources</h3>
+
+<ul>
+<li>Internet, power, work space, food/drink/snack will be provided to all participants</li>
+<li>Students must bring their own laptops and hardware needed for their hacks</li>
+<li>Git and VMs can be provided by CoLab (Need confirmation)</li>
+</ul><h3>Judging Criteria</h3>
+
+<p><strong>25% Design</strong>
+User Experience and User Interface</p>
+
+<p><strong>25% Techical Challenge</strong>
+Complexity/Difficulty of hack, Technologies Used</p>
+
+<p><strong>25% Creativity and Impact</strong>
+Originality in idea, novelty in use case, or general creative problem solving
+Potential market or impact of the hack</p>
+
+<p><strong>25% Demo/Presentation</strong>
+4 minute demo and 1 minute Q&amp;A</p>
+
+<h3>Prizes</h3>
+
+<p><strong>1st place</strong>: TBD (~$500 per person)<br><strong>2nd place</strong>: TBD (~$250 per person)<br><strong>3rd place</strong>: TBD (~$150 per person)<br><strong>Honorable Mention</strong>: Swag<br><strong>Best MongoDb Application</strong>: TBD (Sponsored by 10gen)  </p>
+
+<h3>Sponsors</h3>
+
+<ul>
+<li>
+<strong>Palantir</strong> - Swag, Cash, Engineers</li>
+<li>
+<strong>Google</strong> - Swag, Cash, Engineer</li>
+<li>
+<strong>Github</strong> - Swag, Cash</li>
+<li>
+<strong>10gen</strong> - Swag, Cash</li>
+<li>
+<strong>Duke CoLab</strong> - Resources</li>
+<li>
+<strong>Duke OIT</strong> - Space</li>
+</ul><h3>Judges</h3>
+
+<ul>
+<li>Palantir Engineers (TBD)</li>
+<li>Google Engineer</li>
+<li>Michael Faber</li>
+<li>Professor Robert Duvall</li>
+</ul><h3>Event Details</h3>
 
 <h4>Registration</h4>
 
-<p>All students must <a href="https://docs.google.com/forms/d/1BMN0XmXeEAIrVz-KDn0Y9XX_sCYafxqalepAuKKryCY/viewform">register</a> prior to attending the event. Once arriving on site, students must bring valid student IDs to check in. Name tags will be provided during registration for all registered participants. They must be worn at all times during the event for identification and access to space, resources, and food. While students are strongly encouraged to stay the entire duration of the event, students can use their student IDs and name tags to reenter the competiton if their information can be verified.</p>
+<p>All students must <a href="https://www.hackerleague.org/hackathons/hack-blue">register</a> prior to attending the event. Once arriving on site, students must bring valid student IDs to check in. Name tags will be provided during registration for all registered participants. They must be worn at all times during the event for identification and access to space, resources, and food. While students are strongly encouraged to stay the entire duration of the event, students can use their student IDs and name tags to reenter the competiton if their information can be verified.</p>
 
 <h4>All Meals</h4>
 
@@ -185,9 +168,7 @@ Palantir and Google Engineers will host office hours at a predesignated classroo
 <p><strong>Location:</strong> Perkins 217<br>
 Each team will present their hack and answer questions from judges. See <a href="#judgingcriteria">Judging criteria</a></p>
 
-<hr><h2>Other Notes</h2>
-
-<p>All 3 organizers will be present for the entire duration of the event.</p>
+<hr>
       </section>
     </div>
 
