Added prizes to email

--- a/email.html
+++ b/email.html
@@ -194,7 +194,8 @@
                                                         </div>
                                                         <div style="font-family: 'Courier New', Courier, monospace;font-size: 32px;text-align: center;">
                                                             Sat 4/6 12pm - Sun 4/7 2pm<br>
-                                                            French Family 2231
+                                                            French Family 2231<br>
+                                                            Prizes: iPad Mini, Nexus 7, Jambox
                                                         </div>
                                                         <br>
                                                         <br></td>
