Moved prizes to email boyd

--- a/email.html
+++ b/email.html
@@ -194,8 +194,7 @@
                                                         </div>
                                                         <div style="font-family: 'Courier New', Courier, monospace;font-size: 32px;text-align: center;">
                                                             Sat 4/6 12pm - Sun 4/7 2pm<br>
-                                                            French Family 2231<br>
-                                                            Prizes: iPad Mini, Nexus 7, Jambox
+                                                            French Family 2231
                                                         </div>
                                                         <br>
                                                         <br></td>
@@ -227,6 +226,13 @@
                                                 <tr>
                                                     <td>
                                                         <p>Whether you are a seasoned hacker or a complete beginner, you will have all the resources you need to bring your idea to fruition within a short 24 hours. Compete against the best hackers at Duke and UNC for a chance at some fantastic prizes!</p>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="text-align: center;">
+                                                        <p style="margin:0;">1st Place - iPad Mini</p>
+                                                        <p style="margin:0;">2nd Place - Nexus 7</p>
+                                                        <p style="margin:0;">3nd Place - Jamboxes</p>
                                                     </td>
                                                 </tr>
                                                 <tr>
