Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
       <section id="main_content" class="inner">
         <p>Want to finally build that iPhone app you always wanted? Have a brilliant idea for the next viral game? Want to hang out with the best hackers and designers at Duke and UNC while enjoying lots of free food, swag, and prizes? Or have you assembled a dream team that will create the next big thing on the Web? Come to HackBlue, a student run hackathon sponsored by Google, Palantir, Github, 10gen, and Duke’s Innovations Co-Lab!</p>
 
-<p>Whether you are a seasoned hacker or a complete beginner, you will have all the resources you need to bring your idea to fruition within a short 24 hours. Compete against the best hackers at Duke and UNC for a chance at some fantastic prizes (TBA -- but they’ll be pretty cool, we promise =)</p>
+<p>Whether you are a seasoned hacker or a complete beginner, you will have all the resources you need to bring your idea to fruition within a short 24 hours. Compete against the best hackers at Duke and UNC for a chance at some fantastic prizes</p>
+
+<p>1st Place - iPad Mini
+2nd Place - Nexus 7
+3nd Place - Jamboxes</p>
 
 <h3>Time</h3>
 
@@ -116,7 +120,7 @@ Potential market or impact of the hack</p>
 
 <h3>Prizes</h3>
 
-<p><strong>1st place</strong>: TBD (~$500 per person)<br><strong>2nd place</strong>: TBD (~$250 per person)<br><strong>3rd place</strong>: TBD (~$150 per person)<br><strong>Honorable Mention</strong>: Swag<br><strong>Best MongoDb Application</strong>: TBD (Sponsored by 10gen)  </p>
+<p><strong>1st place</strong>: iPad Mini<br><strong>2nd place</strong>: Nexus 7<br><strong>3rd place</strong>: Jambox<br><strong>Honorable Mention</strong>: Swag<br><strong>Best MongoDb Application</strong>: TBD (Sponsored by 10gen)  </p>
 
 <h3>Sponsors</h3>
 
