Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <p>Whether you are a seasoned hacker or a complete beginner, you will have all the resources you need to bring your idea to fruition within a short 24 hours. Compete against the best hackers at Duke and UNC for a chance at some fantastic prizes</p>
 
-<p>1st Place - iPad Mini
-2nd Place - Nexus 7
-3nd Place - Jamboxes</p>
+<p>1st Place - iPad Mini<br>
+2nd Place - Nexus 7<br>
+3nd Place - Jamboxes  </p>
 
 <h3>Time</h3>
 
