Added link to what are you waiting for

--- a/email.html
+++ b/email.html
@@ -237,7 +237,9 @@
                                                 </tr>
                                                 <tr>
                                                     <td style="text-align: center;">
-                                                        <h2>What are you waiting for?</h2>
+                                                        <a href="http://bit.ly/YLp290" target="_blank" >
+                                                            <h2>What are you waiting for?</h2>
+                                                        </a>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -246,8 +248,8 @@
                                                             <tbody>
                                                                 <tr>
                                                                     <td>
-                                                                        <a href="http://bit.ly/YLp290" target="_blank" style="color: #FFFFFF;font-family: &quot;American Typewriter&quot;,&quot;Courier New&quot;,Courier,monospace;font-size: 14px;font-weight: normal;line-height: 125%;text-decoration: none;">
-                                                                            <img src="http://hackblue.github.com/images/button.png" alt="" />
+                                                                        <a href="http://bit.ly/YLp290" target="_blank" >
+                                                                            <img src="http://hackblue.github.com/images/button.png" alt="Register Now" />
                                                                         </a>
                                                                     </td>
                                                                 </tr>
