--- a/email.html
+++ b/email.html
@@ -237,7 +237,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td style="text-align: center;">
-                                                        <a href="http://bit.ly/YLp290" target="_blank" style="color: #FFFFFF;text-decoration: none;">
+                                                        <a href="http://bit.ly/YLp290" target="_blank" style="color: #FFFFFF;">
                                                             <h2>What are you waiting for?</h2>
                                                         </a>
                                                     </td>
