--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Each team will present their hack and answer questions from judges. See <a href=
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
+        <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" /></a>
 
   </body>
 </html>
