--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ Each team will present their hack and answer questions from judges. See <a href=
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>        <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" /></a></p>
       </footer>
     </div>
 
@@ -193,7 +194,6 @@ Each team will present their hack and answer questions from judges. See <a href=
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-        <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" /></a>
 
   </body>
 </html>
