--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@ Each team will present their hack and answer questions from judges. See <a href=
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-        <p>        <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" /></a></p>
+        <p>
+          Published with <a href="http://pages.github.com">GitHub Pages</a>
+          <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" /></a>
+        </p>
       </footer>
     </div>
 
